--- a/OnlineShop/src/templates/index.html
+++ b/OnlineShop/src/templates/index.html
@@ -27,18 +27,18 @@
 			</div>
 		</section>
         <!--Student 1-->
-		//= navbar.html
-		//= header.html
-		//= top-menu.html
-		//= top-slider.html
-		//= advantages.html
-		<!--		Student 2-->
-		//= stocks.html
-		//= products.html
-		//= gallery.html
-		//= blog.html
-		//= bottom-form.html
-		//= footer.html
+<!--		//= navbar.html-->
+<!--		//= header.html-->
+<!--		//= top-menu.html-->
+<!--		//= top-slider.html-->
+<!--		//= advantages.html-->
+<!--		&lt;!&ndash;		Student 2&ndash;&gt;-->
+<!--		//= stocks.html-->
+<!--		//= products.html-->
+<!--		//= gallery.html-->
+<!--		//= blog.html-->
+<!--		//= bottom-form.html-->
+<!--		//= footer.html-->
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
