--- a/OnlineShop/src/scss/sections/_sections.scss
+++ b/OnlineShop/src/scss/sections/_sections.scss
@@ -2,6 +2,7 @@
 @import "footer";
 @import "navbar";
 @import "top-menu";
+@import "features";
 @import "advantages";
 @import "stocks";
 @import "top-slider";
