--- a/OnlineShop/src/scss/sections/_header.scss
+++ b/OnlineShop/src/scss/sections/_header.scss
@@ -1,6 +1,42 @@
+.header{
+    background-color:#363636;    
+    height: 145px;
+   .container{
+    height: 100%;
+   }    
+    .row{        
+       height: 100%;
+    }
+    a{ 
+      display: block;  
+    }
+   }
 
+   .overlay{
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(244, 244, 244, 0.79);
+   }
 
+.phone{
+    color: white;
+    font-size: 17px;
+}
 
-
-
-
+.cart img{
+  padding: 14px;
+  background-color: #d58e32;
+}
+.rounded-circle {
+  border-radius: 50% !important;
+}
+.my-card-items-count {
+  width: 25px;
+  height: 25px;
+  margin: -10px;
+  text-align: center;
+  line-height: 25px; 
+}
