--- a/OnlineShop/src/templates/index.html
+++ b/OnlineShop/src/templates/index.html
@@ -11,35 +11,26 @@
 	<link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
-    <div class="main-container">
+ 
+    <!--			Student 1           -->
+	//= navbar.html
+    //= header.html
+    //= top-menu.html
+	//= top-slider.html
+	//= features.html
+	//= gallery.html
 
-		<section class="navbar">
-			<div class="container">
-				<div class="navbar-menu-container">
-					<span>USD</span>
-					<span>English</span>
-					<a href="#" class="navbar-links">Help</a>
-				</div>
-				<div class="navbar-form-container">
-					<a href="#" class="navbar-links">Login</a>
-					<a href="#" class="navbar-links">Register</a>
-				</div>
-			</div>
-		</section>
-        <!--Student 1-->
-<!--		//= navbar.html-->
-<!--		//= header.html-->
-<!--		//= top-menu.html-->
-<!--		//= top-slider.html-->
-<!--		//= advantages.html-->
-<!--		&lt;!&ndash;		Student 2&ndash;&gt;-->
+
+
+
+<!--				Student 2           -->
 <!--		//= stocks.html-->
 <!--		//= products.html-->
-<!--		//= gallery.html-->
+<!--		//= advantages.html-->
 <!--		//= blog.html-->
 <!--		//= bottom-form.html-->
 <!--		//= footer.html-->
-	</div>
+	
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
