--- a/OnlineShop/src/templates/blog.html
+++ b/OnlineShop/src/templates/blog.html
@@ -1,10 +1,157 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="blog">
+	<div class="container">
+		<div class="row">
+			<div class="col"><h2 class="title-light">latest blog</h2></div>
+		</div>
+		<div class="row">
+			<div class="col text-center">
+				<div class="blog-carousel owl-carousel owl-theme">
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_1">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_2">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_3">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_1">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_2">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_3">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_1">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_2">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="card" style="width:360px">
+							<div class="card-img-top card_3">
+								<div class="card-blank">
+									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
+									<div><i class="fas fa-comments"></i> 4 Comments</div>
+								</div>
+							</div>
+							<div class="card-body text-center">
+								<h4 class="card-title">Products That Fight Static </h4>
+								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
+									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
+								<a href="#" class="btn blog-btn text-center stretched-link">Read More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
