--- a/OnlineShop/src/templates/footer.html
+++ b/OnlineShop/src/templates/footer.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="footer">
+	<div class="container">
+		<div class="row justify-content-between">
+			<div class="col-6 col-lg-3 text-left">
+				<h3 class="footer-title">INFORMATION</h3>
+				<ul class="list-unstyled">
+					<li class="footer-list-item"><a href="#">About us</a></li>
+					<li class="footer-list-item"><a href="#">Privacy</a></li>
+					<li class="footer-list-item"><a href="#">Conditions</a></li>
+					<li class="footer-list-item"><a href="#">Online support</a></li>
+				</ul>
+			</div>
+			<div class="col-6 col-lg-3 text-left">
+				<h3 class="footer-title">MY ACCOUNT</h3>
+				<ul class="list-unstyled">
+					<li class="footer-list-item"><a href="#">Login</a></li>
+					<li class="footer-list-item"><a href="#">My Cart</a></li>
+					<li class="footer-list-item"><a href="#">Wishlist</a></li>
+					<li class="footer-list-item"><a href="#">Checkout</a></li>
+				</ul>
+			</div>
+			<div class="col-6 col-lg-3 text-left">
+				<h3 class="footer-title">INFORMATION</h3>
+				<ul class="list-unstyled">
+					<li class="footer-list-item"><a href="#">Specials</a></li>
+					<li class="footer-list-item"><a href="#">New Products</a></li>
+					<li class="footer-list-item"><a href="#">Best Sellers</a></li>
+					<li class="footer-list-item"><a href="#">Our Stores</a></li>
+				</ul>
+			</div>
+			<div class="col-6 col-lg-3 text-left">
+				<h3 class="footer-title">ORDERS</h3>
+				<ul class="list-unstyled">
+					<li class="footer-list-item"><a href="#">Payment options</a></li>
+					<li class="footer-list-item"><a href="#">Shipping and delivery</a></li>
+					<li class="footer-list-item"><a href="#">Returns</a></li>
+					<li class="footer-list-item"><a href="#">Shipping</a></li>
+					<li class="footer-list-item"><a class="im" href="#"></a></li>
+					<li class="footer-list-item">
+						<div class="container-fluid">
+							<div class="row d-flex flex-wrap">
+								<img class="footer-cards-container" src="./dist/images/cards/visa.png" alt="visa card">
+								<img class="footer-cards-container" src="./dist/images/cards/master-card.png" alt="master card">
+								<img class="footer-cards-container" src="./dist/images/cards/dacover.png" alt="dacover">
+								<img  class="footer-cards-container" src="./dist/images/cards/blue-card.png" alt="american express">
+								<img  class="footer-cards-container" src="./dist/images/cards/paypal.png" alt="pay pal">
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="footer-bottom">
+	<div class="container">
+		<div class="row d-flex justify-content-xl-end justify-content-sm-center">
+			<div class="col-sm-12 col-md-6 col-xl-4">
+				<div class="footer-bottom-text">
+					&copy;Copyright 2016 Bazar | All Rights Reserved
+				</div>
+			</div>
+			<div class="col-sm-12 col-md-6 col-xl-4">
+				<div class="footer-bottom-social-container">
+					<i class="fab fa-twitter"></i>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-youtube-square"></i>
+					<i class="fab fa-google-plus-g"></i>
+					<i class="fab fa-instagram"></i>
+					<i class="fab fa-pinterest-square"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
