--- a/OnlineShop/src/templates/stocks.html
+++ b/OnlineShop/src/templates/stocks.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="stocks">
+	<div class="container">
+		<div class="row d-flex justify-content-center">
+			<div class="col-12 col-xl-6 d-none d-md-block text-center">
+				<a class="stocks-links" href="#">
+					<div class="stocks-guest-room">
+						<div class="stocks-guest-room-background p-3">
+							<p class="stocks-guest-room-text"><span>guest room</span></br> sofa</p>
+							<p class="stocks-guest-room-text-block">-20%</p>
+						</div>
+					</div>
+				</a>
+			</div>
+			<div class="col-12 col-xl-6 d-flex justify-content-center">
+				<div class="row">
+					<div class="col-12 text-center p-0 m-0">
+						<a class="stocks-links" href="#">
+							<div class="stocks-office-chair">
+								<div class="text-left">
+									<p class="stocks-office-chair-text"><span class="stocks-office-chair-text-bold">
+										office</span > chair</br>
+										<span class="stocks-office-chair-text-smaller">collection</span></p>
+									<p class="stocks-office-chair-ligth-text">$200.00</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="col-12 text-center p-0 m-0">
+						<a class="stocks-links" href="#">
+							<div class="stocks-special">
+								<div class="stocks-special-content">
+									<p class="stocks-special-light-text"><span>special</span> collection</p>
+									<p class="stocks-special-text">save up 45% of furniture</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
