--- a/OnlineShop/src/templates/footer.html
+++ b/OnlineShop/src/templates/footer.html
@@ -54,14 +54,14 @@
 </section>
 <section class="footer-bottom">
 	<div class="container">
-		<div class="row d-flex justify-content-xl-end justify-content-sm-center">
-			<div class="col-sm-12 col-md-6 col-xl-4">
-				<div class="footer-bottom-text">
+		<div class="row d-flex justify-content-lg-end justify-content-center">
+			<div class="col-12 col-md-6 col-lg-4 text-center">
+				<div class="footer-bottom-text text-center">
 					&copy;Copyright 2016 Bazar | All Rights Reserved
 				</div>
 			</div>
-			<div class="col-sm-12 col-md-6 col-xl-4">
-				<div class="footer-bottom-social-container">
+			<div class="col-12 col-md-6 col-lg-4 text-center">
+				<div class="footer-bottom-social-container text-center text-lg-right">
 					<i class="fab fa-twitter"></i>
 					<i class="fab fa-facebook"></i>
 					<i class="fab fa-youtube-square"></i>
