--- a/OnlineShop/src/templates/index.html
+++ b/OnlineShop/src/templates/index.html
@@ -13,15 +13,15 @@
 <body>
 
         <!--Student 1-->
-<!--		//= navbar.html-->
-<!--		//= header.html-->
-<!--		//= top-menu.html-->
-<!--		//= top-slider.html-->
-<!--		//= advantages.html-->
+		//= navbar.html
+		//= header.html
+		//= top-menu.html
+		//= top-slider.html
+		//= features.html
 <!--		&lt;!&ndash;		Student 2&ndash;&gt;-->
 		//= stocks.html
 		//= products.html
-<!--		//= gallery.html-->
+		//= gallery.html
 		//= blog.html
 		//= bottom-form.html
 		//= footer.html
