--- a/OnlineShop/src/scss/main.scss
+++ b/OnlineShop/src/scss/main.scss
@@ -35,7 +35,7 @@
     height: 195px;
   }
   .bottom-form-input{
-    padding-right: 260px;
+    padding-right: 240px;
   }
   .bottom-form-label {
     display: inline-block;
@@ -65,6 +65,9 @@
 @media (min-width: 992px) {
   .products-filter{
     display: block;
+  }
+  .bottom-form-label{
+    font-size: 1.375rem;
   }
 
   .title-light::after{
