--- a/OnlineShop/src/scss/main.scss
+++ b/OnlineShop/src/scss/main.scss
@@ -2,17 +2,34 @@
 @import "mixin";
 @import "reset";
 @import "fuction";
-
 @import "sections/sections";
 @import "components/components";
 @import "carousel/owl.carousel";
 
+@media (min-width: 576px) {
+  .bottom-form-label {
+    display: none !important;
+  }
+  .bottom-form-btn{
+    display: inline-block;
+  }
+  .bottom-form-input{
+    padding-right: 20px;
+    padding-left: 40px
+  }
+  .bottom-form-icon{
+    font-size: 1rem;
+    display: inline-block;
+  }
+
+}
 
 @media (min-width: 768px) {
   .stocks-office-chair{
     width: 555px;
     height: 195px;
   }
+
   .stocks-office-chair-text{
     font-size: 1.75rem;
     &-smaller{
@@ -34,12 +51,21 @@
     width: 555px;
     height: 195px;
   }
-  .bottom-form-input{
-    padding-right: 240px;
+  .bottom-form{
+    @include padding(36px, 0, 36px, 0);
   }
+
   .bottom-form-label {
-    display: inline-block;
+    display: inline-block !important;
   }
+  .bottom-form-input{
+    padding-right: 150px;
+    padding-left: 60px;
+  }
+  .bottom-form-icon{
+    left: 7%;
+  }
+
   .bottom-form-btn {
     margin-left: 20px;
   }
@@ -60,13 +86,14 @@
       margin-right: 30px;
    }
 
+
 }
 
 @media (min-width: 992px) {
   .products-filter{
     display: block;
   }
-  .bottom-form-label{
+  .bottom-blog-form-label{
     font-size: 1.375rem;
   }
 
@@ -83,6 +110,12 @@
 
   .modal-product-footer-container{
     @include flex-layout(flex-start, center);
+  }
+  .bottom-form-input{
+    padding-right: 240px;
+  }
+  .bottom-form-icon{
+    left: 5%;
   }
 }
 
