--- a/OnlineShop/src/scss/sections/_bottom-form.scss
+++ b/OnlineShop/src/scss/sections/_bottom-form.scss
@@ -1,20 +1,22 @@
 .bottom-form{
   width: 100%;
   background-color: #f2f2f2;
-  @include padding(36px, 0, 36px, 0);
+  @include padding(15px, 0, 15px, 0);
   &-label{
-    font-size: 1rem;
+    font-size: 1.375rem;
     font-weight: bold;
     color: $primary-color;
     text-transform: uppercase;
     margin-right: 2rem;
     display: none;
+    font-family: $font-family;
   }
   &-input{
     border: none;
-    padding-right: 150px;
-    padding-left: 55px;
+    padding-right: 10px;
+    padding-left: 20px;
     height: 46px;
+    margin: 0;
     &::placeholder{
       color: rgba(180, 180, 180, 255);
       font-size: 0.875rem;
@@ -22,12 +24,13 @@
   }
   &-icon{
     color: $primary-color;
-    font-size: 1rem;
+    font-size: 0.75rem;
     display: inline-block;
     border-right: 1px solid rgba(180, 180, 180, 255);
-    padding-right: 0.75rem;
+    padding-right: 0.5rem;
     position: relative;
-    left: 6%;
+    left: 10%;
+    display: none;
 
   }
   &-btn{
@@ -40,11 +43,11 @@
     font-size: 1rem;
     display: flex;
     justify-content: center;
+    display: none;
     &:hover{
       color: $primary-color;
       font-size: 1.25rem;
     }
   }
-
 
 }
