--- a/OnlineShop/src/templates/index.html
+++ b/OnlineShop/src/templates/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./dist/css/main.css">
 	<link rel="stylesheet" href="./dist/library/fontawesome/all.min.css">
-	<link rel="stylesheet" href="./dist/css/main.css">
+	<link id="style" rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
 
@@ -30,6 +30,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="./dist/js/main.js"></script>
+<script id="js" src="./dist/js/main.js"></script>
 </body>
 </html>
