--- a/OnlineShop/src/templates/data.html
+++ b/OnlineShop/src/templates/data.html
@@ -1,5 +1,5 @@
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_10  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -31,7 +31,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_11  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -63,7 +63,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_12  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -95,7 +95,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_13  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -127,7 +127,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_14  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -159,7 +159,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_15  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -191,7 +191,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_16  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -223,7 +223,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_17  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -255,7 +255,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_18  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -287,7 +287,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_19  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
@@ -319,7 +319,7 @@
 	</div>
 </div>
 <div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-	<div class="card">
+	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_20  products-img">
 			<div class="products-card-btn">
 				<a href="#" type="button" class="btn btn-prod-details"
