--- a/OnlineShop/src/templates/products.html
+++ b/OnlineShop/src/templates/products.html
@@ -20,7 +20,7 @@
 				<div class="products-catalog p-0 m-0">
 					<div class="row d-flex justify-content-between p-0 m-0">
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_1  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -52,7 +52,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_2  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -85,7 +85,7 @@
 
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_3  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -117,7 +117,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-md-block">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_4  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -149,7 +149,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_5  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -181,7 +181,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_6  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -213,7 +213,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_7  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -245,7 +245,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_8  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
@@ -277,7 +277,7 @@
 							</div>
 						</div>
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-							<div class="card">
+							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_9  products-img">
 									<div class="products-card-btn">
 										<a href="#" type="button" class="btn btn-prod-details"
