--- a/OnlineShop/src/templates/products.html
+++ b/OnlineShop/src/templates/products.html
@@ -18,7 +18,7 @@
 				</div>
 				<h2 class="products-title">furniture</h2>
 				<div class="products-catalog p-0 m-0">
-					<div class="row d-flex justify-content-between p-0 m-0">
+					<div class="row d-flex justify-content-md-between justify-content-center pr-2 m-0">
 						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_1  products-img">
