--- a/OnlineShop/src/templates/data.html
+++ b/OnlineShop/src/templates/data.html
@@ -1,4 +1,4 @@
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_10  products-img">
 			<div class="products-card-btn">
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_11  products-img">
 			<div class="products-card-btn">
@@ -62,7 +62,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_12  products-img">
 			<div class="products-card-btn">
@@ -94,7 +94,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_13  products-img">
 			<div class="products-card-btn">
@@ -126,7 +126,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_14  products-img">
 			<div class="products-card-btn">
@@ -158,7 +158,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_15  products-img">
 			<div class="products-card-btn">
@@ -190,7 +190,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_16  products-img">
 			<div class="products-card-btn">
@@ -222,7 +222,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_17  products-img">
 			<div class="products-card-btn">
@@ -254,7 +254,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_18  products-img">
 			<div class="products-card-btn">
@@ -286,7 +286,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_19  products-img">
 			<div class="products-card-btn">
@@ -318,7 +318,7 @@
 		</div>
 	</div>
 </div>
-<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 	<div class="card" style="width: 14rem;">
 		<div class="products-img-card_20  products-img">
 			<div class="products-card-btn">
