--- a/OnlineShop/src/templates/products.html
+++ b/OnlineShop/src/templates/products.html
@@ -18,8 +18,8 @@
 				</div>
 				<h2 class="products-title">furniture</h2>
 				<div class="products-catalog p-0 m-0">
-					<div class="row d-flex justify-content-md-between justify-content-center pr-2 m-0">
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+					    <div class="row d-flex justify-content-md-between justify-content-center pr-2 m-0">
+						<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_1  products-img">
 									<div class="products-card-btn">
@@ -51,7 +51,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+						<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_2  products-img">
 									<div class="products-card-btn">
@@ -84,7 +84,7 @@
 							</div>
 
 						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
+						<div class="products-catalog-item d-flex justify-content-center p-0 col-12 col-md-6 col-lg-3">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_3  products-img">
 									<div class="products-card-btn">
@@ -116,7 +116,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-md-block">
+						<div class="products-catalog-item d-md-flex justify-content-center p-0 col-12 col-md-6 col-lg-3 d-none ">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_4  products-img">
 									<div class="products-card-btn">
@@ -147,40 +147,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-							<div class="card" style="width: 14rem;">
-								<div class="products-img-card_5  products-img">
-									<div class="products-card-btn">
-										<a href="#" type="button" class="btn btn-prod-details"
-										   data-toggle="modal"
-										   data-target="#productModal" data-whatever="5">Quick View</a>
-										<a href="#" class="btn btn-basket"><i
-												class="fas fa-shopping-basket"></i> add to
-											cart</a>
-										<div class="products-icon-sale">sale</div>
-									</div>
-								</div>
-								<div class="card-body text-center">
-									<h4 class="card-title">Aenean Ru Bristique</h4>
-									<p class="card-text text-center">
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star"></i>
-										<i class="fas fa-star-half-alt"></i>
-										<i class="far fa-star"></i>
-										<i class="far fa-star"></i>
-									</p>
-									<div class="card-content">
-										<div >
-											<span><i class="far fa-heart"></i></span>
-											<span><i class="fas fa-exchange-alt"></i></span>
-										</div>
-										<div class="card-content-price">&#36;30.00</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
+						<div class="products-catalog-item d-lg-flex justify-content-center p-0 col-12 col-md-6 col-lg-3 d-none ">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_6  products-img">
 									<div class="products-card-btn">
@@ -212,7 +179,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
+						<div class="products-catalog-item d-lg-flex justify-content-center p-0 col-12 col-md-6 col-lg-3 d-none ">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_7  products-img">
 									<div class="products-card-btn">
@@ -244,7 +211,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
+						<div class="products-catalog-item d-lg-flex justify-content-center p-0 col-12 col-md-6 col-lg-3 d-none ">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_8  products-img">
 									<div class="products-card-btn">
@@ -276,7 +243,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
+						<div class="products-catalog-item d-lg-flex justify-content-center p-0 col-12 col-md-6 col-lg-3 d-none ">
 							<div class="card" style="width: 14rem;">
 								<div class="products-img-card_9  products-img">
 									<div class="products-card-btn">
