--- a/OnlineShop/src/scss/sections/_products.scss
+++ b/OnlineShop/src/scss/sections/_products.scss
@@ -130,6 +130,7 @@
 
       & .card {
         border: 1px solid #f4f5f7;
+        border-radius: 0;
         //width: 262px;
         //height: 410px;
         padding: 0;
