--- a/OnlineShop/src/templates/blog.html
+++ b/OnlineShop/src/templates/blog.html
@@ -7,7 +7,7 @@
 			<div class="col text-center">
 				<div class="blog-carousel owl-carousel owl-theme">
 					<div class="item">
-						<div class="card" style="width:360px">
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_1">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -23,7 +23,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" style="width:360px">
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_2">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -39,7 +39,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" ">
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_3">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" >
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_1">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -71,7 +71,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" >
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_2">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -87,7 +87,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" >
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_3">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -103,7 +103,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" >
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_1">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -119,7 +119,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" >
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_2">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -135,7 +135,7 @@
 						</div>
 					</div>
 					<div class="item">
-						<div class="card" >
+						<div class="card" style="width: 20rem;">
 							<div class="card-img-top card_3">
 								<div class="card-blank">
 									<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
